--- a/components/codetools/languages/codetools.fi.po
+++ b/components/codetools/languages/codetools.fi.po
@@ -47,7 +47,7 @@ msgid "; expected after \"%s\" property specifier, but %s found"
 msgstr ""
 
 #: codetoolsstrconsts:ctsanoymdefinitionsarenotallowed
-msgid "Anonym %s definitions are not allowed"
+msgid "Anonymous %s definitions are not allowed"
 msgstr ""
 
 #: codetoolsstrconsts:ctscpudirectory
