--- a/components/codetools/languages/codetools.po
+++ b/components/codetools/languages/codetools.po
@@ -119,7 +119,7 @@ msgid "string constant"
 msgstr ""
 
 #: codetoolsstrconsts:ctsanoymdefinitionsarenotallowed
-msgid "Anonym %s definitions are not allowed"
+msgid "Anonymous %s definitions are not allowed"
 msgstr ""
 
 #: codetoolsstrconsts:ctsendforrecordnotfound
