--- a/components/codetools/languages/codetools.fr.po
+++ b/components/codetools/languages/codetools.fr.po
@@ -59,8 +59,8 @@ msgid "; expected after \"%s\" property specifier, but %s found"
 msgstr "; prévu après la propriété \"%s\", mais %s trouvé"
 
 #: codetoolsstrconsts:ctsanoymdefinitionsarenotallowed
-msgid "Anonym %s definitions are not allowed"
-msgstr "Les définitions anonymes %s ne sont pas permises"
+msgid "Anonymous %s definitions are not allowed"
+msgstr ""
 
 #: codetoolsstrconsts:ctscpudirectory
 msgid "CPU directory"
