--- a/components/codetools/languages/codetools.plwin.po
+++ b/components/codetools/languages/codetools.plwin.po
@@ -58,8 +58,8 @@ msgid "; expected after \"%s\" property specifier, but %s found"
 msgstr "zamiast \";\" po specyfikacji w³aœciwoœci \"%s\" znalaziono %s"
 
 #: codetoolsstrconsts:ctsanoymdefinitionsarenotallowed
-msgid "Anonym %s definitions are not allowed"
-msgstr "Anonimowe definicje %s nie s¹ dozwolone"
+msgid "Anonymous %s definitions are not allowed"
+msgstr ""
 
 #: codetoolsstrconsts:ctscpudirectory
 msgid "CPU directory"
