--- a/components/synedit/languages/synedit.ca.po
+++ b/components/synedit/languages/synedit.ca.po
@@ -23,8 +23,8 @@ msgid "Borland Form Files (*.dfm;*.xfm)|*.dfm;*.xfm"
 msgstr "Fitxers de formes Borland (*.dfm;*.xfm)|*.dfm;*.xfm"
 
 #: syneditstrconst:syns_filtercpp
-msgid "C++ Files (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
-msgstr "Fitxers C++ (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
+msgid "C++ Files (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh"
+msgstr ""
 
 #: syneditstrconst:syns_filtercaclipper
 msgid "CA-Clipper Files (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
