--- a/components/synedit/languages/synedit.fi.po
+++ b/components/synedit/languages/synedit.fi.po
@@ -23,7 +23,7 @@ msgid "Borland Form Files (*.dfm;*.xfm)|*.dfm;*.xfm"
 msgstr "Borland Form tiedostot (*.dfm;*.xfm)|*.dfm;*.xfm"
 
 #: syneditstrconst:syns_filtercpp
-msgid "C++ Files (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
+msgid "C++ Files (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh"
 msgstr ""
 
 #: syneditstrconst:syns_filtercaclipper
