--- a/components/synedit/languages/synedit.it.po
+++ b/components/synedit/languages/synedit.it.po
@@ -33,8 +33,8 @@ msgid "Borland Form Files (*.dfm;*.xfm)|*.dfm;*.xfm"
 msgstr "File Form Borland (*.dfm;*.xfm)|*.dfm;*.xfm"
 
 #: syneditstrconst:syns_filtercpp
-msgid "C++ Files (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
-msgstr "File C++ (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
+msgid "C++ Files (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh"
+msgstr ""
 
 #: syneditstrconst:syns_filtercaclipper
 msgid "CA-Clipper Files (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
