improved layout and german localization of configure build lazarus dialog (issue 1321)
 SVN 8546@trunk

--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -1386,7 +1386,7 @@ msgstr "Installierte Pakete einrichten"
 
 #: lazarusidestrconsts:lislazbuildconfirmbuild
 msgid "Confirm Before ReBuild Lazarus"
-msgstr ""
+msgstr "Bestätigen bevor Lazarus neu erstellt wird"
 
 #: lazarusidestrconsts:lisconfirmchanges
 msgid "Confirm changes"
