--- a/tools/install/debian_fpcsrc/changelog
+++ b/tools/install/debian_fpcsrc/changelog
@@ -1,3 +1,9 @@
+fpcsrc (2.0.3)
+
+	  * Bugfixes
+
+	 -- Mattias Gaertner <mattias@cvs.freepascal.org>  01/11/2006
+
 fpcsrc (1.0.10)
 
 	  * Bugfixes
